<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:id="@+id/drawerLayout"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <com.google.android.material.navigation.NavigationView
        app:menu="@menu/home_menu"
        app:theme="@style/NavigationStyle"
        app:headerLayout="@layout/header_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        android:layout_gravity = "start"/>
        <RelativeLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="MovieStreaming" />
                <ImageView
                    android:id="@+id/btn_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_menu"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp" />
            </RelativeLayout>

            <ScrollView
                android:id="@+id/scrolview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/slider_home"
                        android:layout_width="match_parent"
                        android:layout_height="250dp" />
                    <com.google.android.material.tabs.TabLayout
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        app:tabGravity = "center"
                        android:background="@color/colorPrimary"
                        app:tabBackground ="@drawable/bg_tabs"
                        app:tabIndicatorHeight = "0dp"
                        android:id="@+id/tabLayout"/>
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/genre"
                            android:paddingLeft="10dp"
                            android:paddingStart="10dp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/more"
                            android:paddingRight="10dp"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp" />
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rc_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="4"
                        android:layout_margin="10dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/top_movies_imdb"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_height="wrap_content"
                            android:text="@string/more"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_top_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        tools:itemCount="4"/>
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/top_persian"
                            android:paddingLeft="10dp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/more"
                            android:paddingRight="10dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rc_irani_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="4"
                        android:layout_margin="10dp"/>
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/new_released"
                            android:paddingLeft="10dp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/more"
                            android:paddingRight="10dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rc_new_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="4"
                        android:layout_margin="10dp"/>
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="Animations"
                            android:paddingLeft="10dp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/more"
                            android:paddingRight="10dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rc_animations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="4"
                        android:layout_margin="10dp"/>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>



</androidx.drawerlayout.widget.DrawerLayout>